Typos + some corrections

--- a/Likely_Examiner_Questions.tex
+++ b/Likely_Examiner_Questions.tex
@@ -8,7 +8,7 @@ After having read parts of the thesis, these are some of the questions people th
     \item Background/Theory
     \begin{itemize}
         \item Brief description / be able to sketch the historically significant neutrino experiments.
-        \item Benefits of on-axis vs off-axis detectors. 
+        \item Benefits of on-axis vs off-axis detectors. https://arxiv.org/pdf/hep-ex/0111033.pdf
         \item Exclusion contour vs exclusion sensitivity contour? STEREO plot.
         \item Wilks' theorem - what is it? And why does it apply/maybe not apply to neutrino experiments.
     \end{itemize}
@@ -20,8 +20,7 @@ After having read parts of the thesis, these are some of the questions people th
     
     \item Energy Reco
     \begin{itemize}
-        \item "Apply signal processing techniques" - what are these techniques?
-        \item Why the deconvolved charge drops below 0?
+        \item Why the deconvolved charge drops below 0? Due to FFT when extracting the raw signal from the convolutional integral.
         \item Explanation for the resolution comparisons. Linear and ESTAR pretty close - I think this may just be a binning artefact. Num Electrons a little wider - it systematically assigns higher energies to the hits, so the spread in energies will also be a little broader hence the wider fit. 
     \end{itemize}
     
