--- a/abstract.tex
+++ b/abstract.tex
@@ -4,5 +4,5 @@
 The \gls{sbn} program is comprised of three Liquid Argon Time Projection Chamber detectors located along the beamline of the Booster Neutrino Beam at Fermilab. The three detectors are SBND, MicroBooNE and ICARUS and are at 110 m, 470 m and 600 m from the beam source respectively. The program was designed with the goal of either confirming or refuting the existence of light sterile neutrinos, which have been hinted at by the LSND and MiniBooNE experiments as well as results from reactor and gallium based neutrino experiments. The observation of sterile neutrinos would provide physics beyond the Standard Model as well as being a vital component in understanding the mass generation mechanism for neutrinos. One of the defining properties of sterile neutrinos is that they do not weakly interact meaning that direct detection is not viable, however, mixing may occur with the active neutrinos which allows for the appearance and disappearance of active neutrinos to be observed.  
 
 The development of electromagnetic shower reconstruction algorithms used in SBND are presented which are crucial for calculating the reconstructed neutrino energy from \nue CC interactions. The neutrino energy is one of the variables used to calculate the neutrino oscillation probability which is the other major topic that is discussed in this thesis. Assuming a $(3+1)$ neutrino framework, the \nue appearance and disappearance sensitivities are calculated from a \nue CC inclusive sample for the SBN program using Monte Carlo events. %The analysis included flux and interaction systematic parameters as well as a discussion on the possible impact due to efficiency uncertainties. 
-The \nue appearance exclusion sensitivities from SBND show a stronger constraint than previous results and the allowed region is compatible with the LSND result. The SBN \nue disappearance exclusion sensitivity excludes much of the allowed region from the ND280 detector whereas the SBN allowed region is still compatible with that from ND280.
+The \nue appearance exclusion sensitivities from SBN show a stronger constraint than previous results and the allowed region is compatible with the LSND result. The SBN \nue disappearance exclusion sensitivity excludes much of the allowed region from the T2K-ND280 detector whereas the SBN allowed region is still compatible with that from T2K-ND280.
 \end{abstract}
