--- a/chap1-introduction.tex
+++ b/chap1-introduction.tex
@@ -4,7 +4,7 @@
 %% Restart the numbering to make sure that this is definitely page #1!
 \pagenumbering{arabic}
 
-Neutrinos are a class of neutral leptonic particle that, within the \gls{sm}, only interact via the weak interaction and gravity \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}. The idea of a neutrino was first proposed in 1930 by Pauli and was not experimentally confirmed until 1956 by Cowan and Reines \cite{Pauli_letter} \cite{cowan_and_reines_paper}. Two further types (or flavours) of neutrinos were discovered in 1962 and 2000 by the Alternating Gradient Synchrotron and the \Gls{donut} experiment respectively \cite{Muon_neutrino_discovery} \cite{DONUT}. 
+Neutrinos are a class of neutral leptonic particle that, within the \gls{sm}, only interact via the weak interaction \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}. The idea of a neutrino was first proposed in 1930 by Pauli and was not experimentally confirmed until 1956 by Cowan and Reines \cite{Pauli_letter} \cite{cowan_and_reines_paper}. Two further types (or flavours) of neutrinos were discovered in 1962 and 2000 by the Alternating Gradient Synchrotron and the \Gls{donut} experiment respectively \cite{Muon_neutrino_discovery} \cite{DONUT}. 
 
 Neutrinos were long thought to be massless, but results from the \gls{sk} collaboration in 1988 showed that the flavour of a neutrino may oscillate which disabused this idea \cite{SuperK_neutrino_oscillations}. Confirmation of neutrino oscillations required non-zero neutrino masses and also helped resolve the long-standing \textit{Solar Neutrino Problem} and the \textit{Atmospheric Neutrino Anomaly} \cite{Homestake} \cite{Atmospheric_anomaly}. There are, however, still a number of open questions which are of interest to particle physics that are linked to neutrinos, such as; 
 \begin{itemize}
@@ -12,16 +12,16 @@ Neutrinos were long thought to be massless, but results from the \gls{sk} collab
     \item The absolute mass of the neutrinos.
     \item The neutrino mass hierarchy. 
     \item The Dirac or Majorana nature of neutrinos. Since neutrinos are neutral particles, it is possible that they may be their own antiparticles (a Majorana particle), a property that would be unique to neutrinos. 
-    \item The possible existence of sterile neutrinos which are additional flavours of neutrinos that would only interact via gravity. 
+    \item The possible existence of sterile neutrinos which are additional flavours of neutrinos. 
 \end{itemize}
-The Majorana nature of neutrinos would allow for neutrinoless double beta decay, a process which does not conserve lepton number \cite{neutrinoless_double_beta_decay}. Sterile neutrinos have been hinted at by a number of experiments and are expected to have right-handed helicities which is in contrast to the active neutrinos which have all been observed to have left-handed helicities \cite{White_Paper}. The confirmation of either of these would give direct evidence of physics beyond the \gls{sm}. All of these questions are under active investigation by current and future neutrino experiments. 
+The Majorana nature of neutrinos would allow for neutrinoless double beta decay, a process which does not conserve lepton number \cite{neutrinoless_double_beta_decay}. Sterile neutrinos have been hinted at by a number of experiments and are expected to have right-handed helicities which is in contrast to the active neutrinos which have all been observed to have left-handed helicities \cite{White_Paper}. The confirmation of either of these would give additional evidence of physics beyond the \gls{sm}. All of these questions are under active investigation by current and future neutrino experiments. 
 
-The focus of this thesis will be on the \gls{sbn} program which is currently under development with the main goal being to either confirm or refute the existence of light sterile neutrinos. The \gls{sbn} program is located at Fermilab and consists of three distinct \gls{lartpc} type detectors located along the \gls{bnb} beamline \cite{SBN_Proposal}. The \gls{sbnd} will be the nearest detector to the beam source at a distance of a 110 m and is currently under construction with the expectation that data taking will begin in early 2024 \cite{sbnd_timeline}. The two other detectors which are part of the \gls{sbn} program are the \gls{microboone} detector at 470 m and the \gls{icarus} detector at 600 m from the beam source, both of which are currently taking data. As mentioned, the main goal of the program will be to search for eV scale sterile neutrinos, but there are numerous other aims which include, measuring neutrino-argon interactions (due to the close proximity of \gls{sbnd} to the beam source, the observed statistics will far exceed that of any current dataset), developing large scale \gls{lartpc} technology and the search for possible \gls{bsm} processes \cite{SBN_paper}. All of these will be crucial in the development and physics analysis of future \gls{lar} neutrino detectors such as the \gls{dune}. 
+The focus of this thesis will be on the \gls{sbn} program which is currently under development with the main goal being to either confirm or refute the existence of light sterile neutrinos. The \gls{sbn} program is located at Fermilab and consists of three distinct \gls{lartpc} type detectors located along the \gls{bnb} beamline \cite{SBN_Proposal}. The \gls{sbnd} will be the nearest detector to the beam source at a distance of a 110 m and is currently under construction with the expectation that data taking will begin in early 2024 \cite{sbnd_timeline}. The two other detectors which are part of the \gls{sbn} program are the \gls{microboone} detector at 470 m and the \gls{icarus} detector at 600 m from the beam source, both of which are currently taking data. As mentioned, the main goal of the program will be to search for eV scale sterile neutrinos, but there are numerous other aims which include measuring neutrino-argon interactions (due to the close proximity of \gls{sbnd} to the beam source, the observed statistics will far exceed that of any current dataset) and the search for possible \gls{bsm} processes \cite{SBN_paper}. In addition to physics goals, the \gls{sbn} program will also help to develop large scale \gls{lartpc} technology. All of these will be crucial in the development and physics analysis of future \gls{lar} neutrino detectors such as the \gls{dune}. 
 
 The remaining content of this thesis begins with \ChapterRef{chap:Neutrino Physics}, which gives a brief overview of the ideas and experiments which have led to the discovery of the three active neutrino flavours. This is then followed by a discussion of the key physics principles describing neutrino behaviour. Finally, the experimental results which are at odds with a 3-flavour paradigm and point towards the presence of sterile neutrinos are considered along with the theory that underpins their possible existence. 
 
 \ChapterRef{chap:SBN Program} then gives an overview of the \gls{sbn} program along with the general operating principles of a \gls{lartpc} and the \gls{bnb}. The individual detector specifics and the key components of \gls{sbnd}, \gls{microboone} and \gls{icarus} are discussed as well as the expected physics capabilities of the program as a whole. 
 
-The different algorithms for calculating the reconstructed \gls{em} shower energy in \gls{sbnd} that have been developed are presented in \ChapterRef{chap:Energy_Reco}. \gls{em} shower energy is an important quantity that is used in a number of areas, including calculating the reconstructed neutrino energy. The method that each of the three \gls{em} shower reconstruction algorithms that are available as part of the \textit{LArPandoraShower} suite of tools, the \textit{Shower Linear Energy tool}, the \textit{Shower Num Electrons Energy tool} and the \textit{Shower ESTAR Energy tool} use is outlined as well as comparing the reconstruction performance with truth information. The reconstruction performance is validated for showers arising from both electrons and photons as well as evaluating the performance as a function of true shower energy and the direction of a shower within the \gls{tpc}. 
+The different algorithms for calculating the reconstructed \gls{em} shower energy in \gls{sbnd} that have been developed are presented in \ChapterRef{chap:Energy_Reco}. \gls{em} shower energy is an important quantity that is used in a number of areas, including calculating the reconstructed neutrino energy. The method that each of the three \gls{em} shower reconstruction algorithms that are available as part of the \textit{LArPandoraShower} suite of tools, the \textit{Shower Linear Energy tool}, the \textit{Shower Num Electrons Energy tool} and the \textit{Shower ESTAR Energy tool} use are outlined as well as comparing the reconstruction performance with truth information. The reconstruction performance is validated for showers arising from both electrons and photons as well as evaluating the performance as a function of true shower energy and the direction of a shower within the \gls{tpc}. 
 
 The necessary inputs, choices, method and results for an oscillation analysis are outlined in \ChapterRef{chap:osc_inputs} and \ChapterRef{chap:VALOR}. First the \gls{mc} event production and selection are described followed by the systematic uncertainties that are considered. The VALOR framework is used to perform the oscillation analysis with an emphasis on the \nue appearance and \nue disappearance channels. Each oscillation channel is considered as an independent analysis and sensitivities are presented from various combinations of detectors and systematic uncertainties. These include exclusion contours and allowed regions for the statistical-only case and the case where flux and interaction uncertainties have been included plus an investigation into the possible impact of additional efficiency uncertainties on the exclusion sensitivity. 
