--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -18,7 +18,7 @@ Reconstructed quantities are the main focus of this chapter and these are typica
     \item The lineage of the particles is identified and the particles are classified as either track- or shower-like.
 \end{enumerate}
 
-A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. In such cases, the signal above threshold may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a waveform that is above threshold for many ticks with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
+A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. Each Gaussian fit has an associated goodness-of-fit value which quantifies how representative the fit is to the actual waveform. This allows for the hit finding to be controlled depending on the accuracy of the hit-finding. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. In such cases, the signal above threshold may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a waveform that is above threshold for many ticks with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
 
 \begin{figure}[h!]
     \centering
@@ -41,7 +41,7 @@ Once the charge of a hit has been determined, the final steps which involve conv
 \begin{equation}\label{eqn:ModBox}
     \frac{dE}{dx} = \frac{\exp{(\frac{\beta}{\rho \mathcal{E}} W_{ion}.\frac{dQ}{dx}}) - \alpha}{\frac{\beta}{\rho \mathcal{E}}},
 \end{equation}
-where $\frac{dE}{dx}$ is the deposited energy per unit length, $\frac{dQ}{dx}$ is the deposited charge per unit length,  $\mathcal{E}$ is the electric field in the detector, $\rho$ is the density of liquid argon, $W_{ion} = 23.6$ eV/\electron which is the energy required to ionise an argon atom, $\alpha = 0.93 \pm 0.02$ and $\beta = 0.212 \pm 0.002$ (kV/cm)(g/cm$^2$)/MeV. The values for parameters $\alpha$ and $\beta$ are results from the \Gls{argoneut} experiment \cite{ArgoNeuT_recombination_paper}. The recombination correction, \textit{R}, is given by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$.
+where $\frac{dE}{dx}$ is the deposited energy per unit length, $\frac{dQ}{dx}$ is the deposited charge per unit length,  $\mathcal{E}$ is the electric field in the detector, $\rho$ is the density of liquid argon, $W_{ion} = 23.6$ eV/\electron which is the energy required to ionise an argon atom, $\alpha = 0.93 \pm 0.02$ and $\beta = 0.212 \pm 0.002$ (kV/cm)(g/cm$^2$)/MeV. The values for parameters $\alpha$ and $\beta$ are results from the \Gls{argoneut} experiment \cite{ArgoNeuT_recombination_paper}. 
 
 
 Since the recombination model is $\frac{dE}{dx}$ dependent, an accurate path length, \textit{dx}, is needed which requires 3D reconstruction of the direction. Because a shower is treated as a single object, which means the trajectory of constituent components are not tracked, it is therefore not straightforward to directly correct for the recombination effect \cite{MicroBooNE_photon_Ereco_paper}. Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below: 1) assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
@@ -54,7 +54,7 @@ In the analysis and validation of the shower reconstruction, a number of \textit
     \item Energy of showering particle: This is the energy of the particle which results in the shower which is being investigated. 
 \end{itemize}
 \subsection{Linear Energy}\label{subchap:Linear Energy Tool}
-The first shower energy reconstruction method developed was the \textit{Shower Linear Energy tool}. This tool relies on the linear relationship between the true energy deposited in the detector and the reconstructed charge from \gls{mip} muons. A sample of simulated muons are used as calibration because the $\frac{dE}{dx}$ value for electrons and \Gls{mip} muons are not dissimilar. The relationship between the charge obtained from the hits due to the muons and the energy deposited by the muons is shown in \FigureRef{fig:linear lookup curve}. A linear relationship such as this is comparable to assuming a constant recombination factor. 
+The first shower energy reconstruction method developed was the \textit{Shower Linear Energy tool}. This tool relies on the linear relationship between the true energy deposited in the detector and the reconstructed charge from \gls{mip} muons. A sample of simulated muons are used to demonstrate this relation because the $\frac{dE}{dx}$ value for electrons and \Gls{mip} muons are not dissimilar. The relationship between the charge obtained from the hits due to the muons and the energy deposited by the muons is shown in \FigureRef{fig:linear lookup curve}. A linear relationship such as this is comparable to assuming a constant recombination factor. 
 
 %\begin{center}
 %    \centering
@@ -64,12 +64,12 @@ The first shower energy reconstruction method developed was the \textit{Shower L
 %    \label{fig:linear lookup curve}
 %\end{center}
 
-To estimate the reconstructed shower energy, the charge found to be associated with a shower would be used to directly read off the associated energy from the linear calibration. A further recombination correction is not required as it has already been accounted for in the charge-to-energy conversion. It should be noted that along with the recombination correction, hit reconstruction and pattern recognition inefficiencies are also corrected for in the calibration curve.  The \textit{Shower Linear Energy tool} has been largely disfavoured since the development of the two other reconstruction tools. 
+To estimate the reconstructed shower energy, the charge found to be associated with a shower would be used to directly read off the associated energy from the linear calibration. A further recombination correction is not required as it has already been accounted for in the charge-to-energy conversion. It should be noted that along with the recombination correction, hit reconstruction and pattern recognition inefficiencies are also corrected for in the curve.  The \textit{Shower Linear Energy tool} has been largely disfavoured since the development of the two other reconstruction tools. 
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap4/linear_tool_lookup_curve.pdf}
-    \caption{The linear relationship between deposited charge and energy. Produced from a sample of muons used for calibrating the \textit{Shower Linear Energy tool.}}
+    \caption{The linear relationship between deposited charge and energy. Produced from a sample of simulated muons and used in the \textit{Shower Linear Energy tool.}}
     \label{fig:linear lookup curve}
 \end{figure}
 
