--- a/chap7-conclusion.tex
+++ b/chap7-conclusion.tex
@@ -9,21 +9,6 @@ Both the \textit{Shower Num Electrons Energy tool} and the \textit{Shower ESTAR 
 
 The oscillation analysis was initially performed in order to recreate the work done in the \gls{sbn} proposal with an updated and better motivated set of inputs. The focus was on using a \nue CC inclusive sample as part of a (3+1) neutrino framework where both the \nue appearance and disappearance channels were considered independently. Exclusion contours as well as allowed regions from an injected signal at $\sin^2{2\theta_{\mu e}} = 0.003$, $\Delta m^2_{41}$ = 1.32 eV$^2$ for the appearance channel and $\sin^2{2\theta_{ee}} = 0.4$, $\Delta m^2_{41}$ = 3 eV$^2$ for the disappearance channel have been created at the $5\sigma$ confidence level. The degradation in the sensitivities due to the inclusion of various efficiency uncertainties on top of the flux and interaction systematics have been investigated. It was shown that any uncorrelated efficiencies dominate the correlated component. On the whole, the impact from efficiency uncertainties on the sensitivity from either \nue channel is relatively minor with the most significant contribution occurring for large $\Delta m^2_{41}$ values where \gls{sbnd} is dominant. 
 
-Going forward, the oscillation analysis will be performed using a fully reconstructed \gls{mc} sample (once it has been sufficiently completed) instead of using the current pseudo-reconstruction. The option to produce joint fits is also currently being developed which should provide an improvement to the sensitivities. Finally, the possibility of using exclusive samples instead of the \gls{cc}-inclusive one are being investigated.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+Going forward, the oscillation analysis will be performed using a fully reconstructed \gls{mc} sample (once it has been sufficiently completed) instead of using the current pseudo-reconstruction. Additionally, the option to produce joint fits will be developed in the future as well as investigating the option of using exclusive samples instead of the \gls{cc}-inclusive one.
 
 
