--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -75,5 +75,8 @@ Thesis submitted in accordance with the requirements of the University of Liverp
 % Reset the glossary so the definitions start after list of tables and figures
 \glsresetall
 
-
-
+\newpage
+\
+\thispagestyle{empty}
+\newpage
+\thispagestyle{empty}
