--- a/glossary.tex
+++ b/glossary.tex
@@ -4,7 +4,7 @@
 
 \newacronym{2p2h}{2p2h}{2 Particles 2 Holes}
 \newacronym{adc}{ADC}{Analog Digital Converter}
-\newacronym{apa}{APA}{Andode Plane Assembly}
+\newacronym[longplural={Anode Plane Assemblies}]{apa}{APA}{Andode Plane Assembly}
 \newacronym{arapuca}{ARAPUCA}{Argon R\&D Advanced Program at UniCAmp}
 \newacronym{argoneut}{ArgoNeuT}{Argon Neutrino Test Stand}
 \newacronym{bdt}{BDT}{Boosted Decision Tree}
@@ -13,6 +13,7 @@
 \newacronym{cc}{CC}{Charged Current}
 \newacronym{ccqe}{CC QE}{Charged Current Quasi Elastic}
 \newacronym{ckm}{CKM matrix}{Cabibbo–Kobayashi–Maskawa matrix}
+\newacronym{cmb}{CMB}{Cosmic Microwave Background}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{cp}{CP}{charge-parity}
 \newacronym{cpa}{CPA}{Cathode Plane Assembly}
