--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1763,7 +1763,7 @@ doi = {https://doi.org/10.1016/S0168-9002(99)01301-7},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900299013017},
 author = {W. Walkowiak},
 keywords = {Liquid argon, Electron drift velocity, Calorimetry},
-abstract = {A measurement of the drift velocity of free electrons in liquid argon has been performed. Free electrons have been produced by photoelectric effect using laser light in a so-called “laser chamber”. The results on the drift velocity vd are given as a function of the electric field strength in the range 0.5kV/cm⩽|E|⩽12.6kV/cm and the temperature in the range 87K⩽T⩽94K. A global parametrization of vd(|E|,T) has been fitted to the data. A temperature dependence of the electron drift velocity is observed, with a mean value of Δvd/(ΔTvd)=(−1.72±0.08)%/K in the range of 87–94 K.}
+abstract = {A measurement of the drift velocity of free electrons in liquid argon has been performed. Free electrons have been produced by photoelectric effect using laser light in a so-called “laser chamber”. The results on the drift velocity vd are given as a function of the electric field strength in the range 0.5kV/cm⩽|E|⩽12.6kV/cm and the temperature in the range 87K⩽T⩽94K. A global parametrization of vd(|E|,T) has been fitted to the data. A temperature dependence of the electron drift velocity is observed, with a mean value of Δvd/(ΔTvd)=(−1.72±0.08)\%/K in the range of 87–94 K.}
 }
 
 @article{PDG_2022,
@@ -2649,4 +2649,38 @@ note = "{[Accessed: Oct, 2022]}"
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.68.274},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.68.274}
+}
+
+@article{MicroBooNE_space_charge_number,
+    collaboration = "MicroBooNE",
+    title = "{Study of Space Charge Effects in MicroBooNE}",
+    doi = "10.2172/1573050",
+    month = "11",
+    year = "2016"
+}
+
+@article{ICARUS_space_charge_number,
+doi = {10.1088/1748-0221/15/07/P07001},
+url = {https://dx.doi.org/10.1088/1748-0221/15/07/P07001},
+year = {2020},
+month = {jul},
+publisher = {},
+volume = {15},
+number = {07},
+pages = {P07001},
+author = {M. Antonello and B. Baibussinov and V. Bellini and F. Boffelli and M. Bonesini and A. Bubak and S. Centro and K. Cieslik and A.G. Cocco and A. Dabrowska and A. Dermenev and A. Falcone and C. Farnese and A. Fava and A. Ferrari and D. Gibin and S. Gninenko and A. Guglielmi and M. Haranczyk and J. Holeczek and M. Kirsanov and J. Kisiel and I. Kochanek and J. Lagoda and A. Menegolli and G. Meng and C. Montanari and C. Petta and F. Pietropaolo and P. Picchi and A. Rappoldi and G.L. Raselli and M. Rossella and C. Rubbia and P. Sala and A. Scaramelli and F. Sergiampietri and M. Spanu and M. Szarska and M. Torti and F. Tortorici and F. Varanini and S. Ventura and C. Vignoli and H. Wang and X. Yang and A. Zalewska and A. Zani},
+title = {Study of space charge in the ICARUS T600 detector},
+journal = {Journal of Instrumentation},
+abstract = {The accumulation of positive ions, produced by ionizing particles crossing Liquid Argon Time Projection Chambers (LAr-TPCs), may generate distortions of the electric drift field affecting the track reconstruction of the ionizing events. These effects could become relevant for large LAr-TPCs operating at surface or at shallow depth, where the detectors are exposed to a copious flux of cosmic rays. A detailed study of such possible field distortions in the ICARUS T600 LAr-TPC has been performed analyzing a sample of cosmic muon tracks recorded with one T600 module operated at surface in 2001. The maximum track distortion turns out to be of few mm in good agreement with the prediction by a numerical calculation. As a cross-check, the same analysis has been performed on a cosmic muon sample recorded during the ICARUS T600 run at the LNGS underground laboratory, where the cosmic ray flux was suppressed by a factor ∼106  by 3400 m water equivalent shielding. No appreciable distortion has been observed, confirming that the effects measured on surface are actually due to ion space charge.}
+}
+
+@article{PRISM-T2K,
+    author = "Bhadra, S. and others",
+    collaboration = "nuPRISM",
+    title = "{Letter of Intent to Construct a nuPRISM Detector in the J-PARC Neutrino Beamline}",
+    eprint = "1412.3086",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    month = "12",
+    year = "2014"
 }
