--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -10,14 +10,14 @@
     \label{fig:sbn_complex}
 \end{figure}
 
-The \gls{sbn} program is comprised of three distinct \gls{lartpc} type detectors located at \gls{fermilab}. The three detectors are \gls{sbnd}, \gls{microboone}, and \gls{icarus}, and all three lie along the axis of the \gls{bnb}. In order to minimise systematic uncertainties, the three detectors share many of the same technologies. The general operating principles of a \gls{lartpc} are described in \SectionRef{sec:lartpc} and the specific details of each detector are discussed in \SectionRef{sec:SBND} (\gls{sbnd}), \SectionRef{sec:MicroBooNE} (\gls{microboone}) and \SectionRef{sec:ICARUS} (\gls{icarus}). The \gls{bnb} consists predominantly of muon neutrinos with energies of the order 1 GeV and is discussed in detail in \SectionRef{sec:BNB}. The three detectors are positioned at 110m, 470m and 600m from the neutrino beam source respectively \cite{SBN_paper}. 
+The \gls{sbn} program is comprised of three distinct \gls{lartpc} type detectors located at \gls{fermilab}. The three detectors are \gls{sbnd}, \gls{microboone}, and \gls{icarus}, and all three lie along the axis of the \gls{bnb} as is shown in \FigureRef{fig:sbn_complex}. In order to minimise systematic uncertainties, the three detectors share many of the same technologies. The general operating principles of a \gls{lartpc} are described in \SectionRef{sec:lartpc} and the specific details of each detector are discussed in \SectionRef{sec:SBND} (\gls{sbnd}), \SectionRef{sec:MicroBooNE} (\gls{microboone}) and \SectionRef{sec:ICARUS} (\gls{icarus}). The \gls{bnb} consists predominantly of muon neutrinos with energies of the order 1 GeV and is discussed in detail in \SectionRef{sec:BNB}. The three detectors are positioned at 110m, 470m and 600m from the neutrino beam source respectively \cite{SBN_paper}. 
 
 One of the primary aims of the \gls{sbn} program is to provide a definitive test to either confirm or refute the existence of light sterile neutrinos which have been hinted at by a number of experiments discussed in \SectionRef{subsec:Neutrino Oscillations}. Other major aims of the \gls{sbn} program include investigating neutrino argon cross-sections and developing large-scale \gls{lartpc} technologies. The close proximity of \gls{sbnd} to the \gls{bnb} source means that \gls{sbnd} will observe neutrino argon interactions with high statistics allowing statistical uncertainties to be minimised and will allow for the exploration of rare channels such as neutrino-electron scattering. Both the development of \gls{lartpc} technology and an improved understanding of neutrino interaction cross-sections will be invaluable for future neutrino experiments such as \gls{dune} \cite{SBN_paper}.
 
 
 \section{Liquid Argon Time Projection Chambers}\label{sec:lartpc}
 
-The idea of a \gls{lartpc} was first proposed in 1977 by Rubbia in an attempt to consolidate the high-resolution but low number of interactions obtained from 'bubble chamber' style detectors and the high rate but low-resolution interactions obtained from 'counter' experiments. This would be achieved by propagating the complete image of an event through a noble element and then electronically reconstructing the 3D event by combining the 2D information collected and the drift time \cite{LArTPC_proposal}.
+The idea of a \gls{lartpc} was first proposed in 1977 by Rubbia in an attempt to consolidate the high-resolution but low number of interactions obtained from `bubble chamber' style detectors and the high rate but low-resolution interactions obtained from `counter' experiments. This would be achieved by propagating the complete image of an event through a noble element and then electronically reconstructing the 3D event by combining the 2D information collected and the drift time \cite{LArTPC_proposal}.
 
 Liquid argon was identified as the most suitable medium to use for such a detector due to the following properties \cite{LArTPC_proposal}; 
 \begin{itemize}
@@ -30,7 +30,7 @@ Liquid argon was identified as the most suitable medium to use for such a detect
 \end{itemize}
 
 \subsection{LArTPC Operating Principles}
-The general design of a single chamber \gls{lartpc} is shown in \FigureRef{fig:lartpc}. Most \gls{lar} detectors consist of one or more \glspl{tpc} with a cathode and anode plane at either end inducing an electric field across the \gls{tpc}. The resulting particles from a neutrino interaction will ionise argon atoms as they traverse through the \gls{tpc}. The electric field causes the ionisation electrons to drift towards the anode where they will induce a current on a series of wire planes. The rearmost wire plane (the one furthest away from the cathode) is known as the collection plane and the one or more wire planes in front of the collection plane are known as induction plane(s). There is a further potential difference between the induction and collection planes which ensures that the electrons will also reach the collection plane. The wire planes are orientated so that the wire angles between the planes are different which allows for 2D position reconstruction. A series of \glspl{pmt} surround the detector which collects scintillation light. The specific designs of the three \glspl{lartpc} used in the \gls{sbn} program are discussed in \SectionRef{sec:SBND} (SBND), \SectionRef{sec:MicroBooNE} (MicroBooNE) and \SectionRef{sec:ICARUS} (ICARUS).
+The general design of a single chamber \gls{lartpc} is shown in \FigureRef{fig:lartpc}. Most \gls{lar} detectors consist of one or more \gls{tpc} with a cathode and anode plane at either end inducing an electric field across the \gls{tpc}. The resulting particles from a neutrino interaction will ionise argon atoms as they traverse through the \gls{tpc}. The electric field causes the ionisation electrons to drift towards the anode where they will induce a current on a series of wire planes. The rearmost wire plane (the one furthest away from the cathode) is known as the collection plane and the one or more wire planes in front of the collection plane are known as the induction plane(s). There is a further potential difference between the induction and collection planes which ensures that the electrons will also reach the collection plane. The wire planes are orientated so that the wire angles between the planes are different which allows for 2D position reconstruction. A series of \glspl{pmt} surround the detector which collects scintillation light. The specific designs of the three \glspl{lartpc} used in the \gls{sbn} program are discussed in \SectionRef{sec:SBND} (SBND), \SectionRef{sec:MicroBooNE} (MicroBooNE) and \SectionRef{sec:ICARUS} (ICARUS).
 
 \begin{figure}[h]
     \centering
@@ -69,7 +69,7 @@ In the presence of an electric field, the electron mobility is no longer given b
     D_T &= \frac{kT}{e}\mu.
 \end{split}
 \end{equation}
-In general, the diffusion in the transverse direction is greater than the diffusion in the longitudinal direction \cite{LArTPC_book} \cite{diffusion}.
+In general, the diffusion in the transverse direction is greater than the diffusion in the longitudinal direction \cite{LArTPC_book} \cite{diffusion}. The current default values used for $D_L$ and $D_T$ in \gls{sbnd} and \gls{icarus} simulations are 4 cm$^2$/s and 8.8 cm$^2$/s respectively whereas in \gls{microboone} simulations $D_L = 6.2$ cm$^2$/s and $D_T = 16.3$ cm$^2$/s are used.
 
 \paragraph{Electron Lifetime}
  Electron lifetime is a measure of the free electrons lost due to attachment to impurities in the liquid argon whilst drifting across the detector \cite{ArgoNeuT_electron_lifetime_paper}. It is also the quantity that drives the width to which a \gls{tpc} is constructed. Naturally, the electron lifetime, $\tau_{e}$, is coupled to the purity of the argon such that
@@ -80,7 +80,10 @@ In general, the diffusion in the transverse direction is greater than the diffus
  \begin{equation}
      Q = Q_{0}e^{-t/\tau_e},
  \end{equation}
-where $Q$ is the charge remaining after correcting for electron lifetime, $Q_0$ is the initial charge and $t$ is the drift time \cite{ArgoNeuT_electron_lifetime_paper}. The lowest electron lifetime (during a period where the purity was considered stable) that \gls{microboone} has observed is 18.0 ms \cite{microboone_electron_lifetime}. Currently, the \gls{sbnd} simulation uses a default value of 10.0 ms for the electron lifetime, whereas the \gls{icarus} simulation uses a value of 15.0 ms. By requiring that the maximum charge loss is only of the order 10\%, this results in a maximum drift distance (\gls{tpc} width) of $\sim1.5$ m. 
+where $Q$ is the charge remaining after correcting for electron lifetime, $Q_0$ is the initial charge and $t$ is the drift time \cite{ArgoNeuT_electron_lifetime_paper}. The lowest electron lifetime (during a period where the purity was considered stable) that \gls{microboone} has observed is 18.0 ms \cite{microboone_electron_lifetime}. Currently, the \gls{sbnd} simulation uses a default value of 10.0 ms for the electron lifetime, whereas the \gls{icarus} simulation uses a value of 15.0 ms.
+
+By requiring that the maximum charge loss is only of the order 10\% and taking $\tau_e = 10$ ms, this results in a value of $t  \approx 1$ ms. The maximum drift distance is then calculated by multiplying \textit{t} and the drift velocity which was stated to be $\sim1.6$ mm/$\mu$s resulting in a drift distance of $\sim 1.6$ m which is the typical width of a \gls{tpc}.
+
  
 \paragraph{Recombination}
 When argon atoms are ionised, the resulting ionised electron may immediately recombine with a nearby argon ion instead of being separated by the electric field in the detector. This is known as the recombination effect and the magnitude of the effect is largely determined by the local electric field. A number of different approaches to model the recombination effect exist, however, for liquid argon detectors, a form of the box model or Jaff\'{e} model are usually used \cite{LArTPC_book}.
@@ -89,7 +92,7 @@ The Jaff\'{e} model is based on the idea that recombination depends on the charg
 \begin{equation}\label{Jaffe}
     Q = \frac{Q_{0}}{1+q_{0}F(E\sin{\phi})},
 \end{equation}
-where $Q_0$ is the initial charge, $Q$ is the charge after recombination, $q_0$ is the initial density of electron-ion pairs and $F$ is a function depending on the electric field $E$, the angle between the field and the ionisation track, $\phi$ and other quantities which describe the diffusion. \EquationRef{Jaffe} is commonly approximated by Birks' law with a normalisation parameter to help fit the model to the experimental data \cite{LArTPC_book}. 
+where $Q_0$ is the initial charge, $Q$ is the charge after recombination, $q_0$ is the initial density of electron-ion pairs and $F$ is a function depending on the electric field, $E$, the angle between the field and the ionisation track, $\phi$ and other quantities which describe the diffusion. \EquationRef{Jaffe} is commonly approximated by Birks' law with a normalisation parameter to help fit the model to the experimental data \cite{LArTPC_book}. 
 
 In their development of the box model, Thomas and Imel assumed the diffusion and ion mobility to be zero and instead of the cylindrical column used in the Jaff\'{e} model, they considered a box with a uniform charge distribution such that, 
 \begin{equation}
@@ -97,7 +100,7 @@ In their development of the box model, Thomas and Imel assumed the diffusion and
 \end{equation}
 where $\xi = \alpha Q_0/E$. $\alpha$ is a free parameter and $Q$ and $Q_0$ are defined as in \EquationRef{Jaffe}\cite{LArTPC_book}\cite{Recombination_box_model}.
 
-In addition to being model-dependent, the exact recombination value is often presented as a function of dE/dx. For an electric field of 0.5 kV/cm, the recombination value has a maximum of $\sim0.7$ at a dE/dx value of $\sim1$ MeV/cm and falls to a minimum of $\sim0.1$ as the dE/dx value increases to $\sim30$ MeV/cm \cite{LArTPC_book}.
+In addition to being model-dependent, the recombination value, \textit{R}, is often presented as a function of dE/dx, with the value being given by by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$, where $W_{ion} = 23.6$ eV/\electron, which is the energy required to ionise an argon atom. For an electric field of 0.5 kV/cm, the recombination value has a maximum of $\sim0.7$ at a dE/dx value of $\sim1$ MeV/cm and falls to a minimum of $\sim0.1$ as the dE/dx value increases to $\sim30$ MeV/cm \cite{LArTPC_book}.
 
 \paragraph{Space Charge}
 The electric field in a \gls{tpc} is usually designed to be uniform between the cathode and the anode, however, particularly for surface-level detectors this often does not end up being the case. Cosmic muons may enter the detector ionising the argon atoms. The ionised electrons and argon ions then drift towards the anode and cathode respectively, however, the drift time for the ions is much greater than the electron drift time. If the flux of cosmic muons entering the detector is sufficiently large, this results in a significant positive charge build-up towards the cathode. This effect is known as \textit{space charge} and directly impacts the recombination effect since it is linked to the magnitude of the local electric field as well as affecting the drifting electrons \cite{microboone_sce}.
@@ -139,7 +142,7 @@ where $E_A$ is the electric field at the anode and both $E'$ and $x'$ are dummy 
 \end{equation}
 where $E_0 = V/D$ is the nominal electric field, \textit{V} is the difference in the voltage between the anode and cathode and $\alpha = \frac{D}{E_0}\sqrt{\frac{K}{\epsilon \mu}}$ which is a dimensionless parameter \cite{space_charge_math}.
 
-
+Due to the effects of space charge, the electric field in \gls{microboone} changes from its nominal value by up to a maximum of 15\% \cite{MicroBooNE_space_charge_number}. The change maximum change in the electric field that \gls{sbnd} and \gls{icarus} experience is at the 4\% level \cite{ICARUS_space_charge_number}. 
 
 \subsubsection{Scintillation and Cherenkov Light}
 
@@ -151,7 +154,7 @@ or by recombination via,
 \begin{equation}
     {\text{Ar}^+} + \text{Ar} \longrightarrow {\text{Ar}_2^+} + \electron \longrightarrow {\text{Ar}_2^*} \longrightarrow {2\text{Ar}} + \gamma.
 \end{equation}
-The excimer may be in one of two states each with a different decay time which gives rise to the fast and slow scintillation mechanisms. Around 23\% of all scintillation light is produced via the fast mechanism with remainder produced via the slow mechanism \cite{scintillation_light_mechanism}. The time period to detect the fast component is \mbox{$\sim6$ ns}, whereas for the slow component it is \mbox{$\sim1.6$ $\mu$s} \cite{SBN_Proposal}.  Since the scintillation light is detected almost instantaneously when compared to the time taken for the electrons to drift to the wire planes, the horizontal drift distance may be determined. Combining this with the 2D information from the wire planes allows for 3D event reconstruction.
+The excimer may be in one of two states each with a different decay time which gives rise to the fast and slow scintillation mechanisms. Around 23\% of all scintillation light is produced via the fast mechanism with the remainder produced via the slow mechanism \cite{scintillation_light_mechanism}. The time period to detect the fast component is \mbox{$\sim6$ ns}, whereas for the slow component it is \mbox{$\sim1.6$ $\mu$s} \cite{SBN_Proposal}.  Since the scintillation light is detected almost instantaneously when compared to the time taken for the electrons to drift to the wire planes, the horizontal drift distance may be determined. Combining this with the 2D information from the wire planes allows for 3D event reconstruction.
 
 Cherenkov light may also be emitted in liquid argon by charged particles crossing the \gls{tpc} (the refractive index of liquid argon is $\sim 1.22$). For highly relativistic particles, this results in a Cherenkov angle of $\sim34^{\circ}$. The number of photons produced by Cherenkov light is significantly less than scintillation light, however, Cherenkov light has the advantage of having an associated direction \cite{Cherenkov_light_liquid_argon}. 
 
@@ -162,14 +165,11 @@ In order to extract the original charge signal on the wire planes from the measu
 
 The induced current on the wire planes is interpreted in terms of signal waveforms. If the waveforms are above some threshold value such that they can be distinguished from noise, \textit{hits} are constructed which encapsulate the signal. Each hit contains information such as the associated wire plane, wire number and charge and it is this information which is used to obtain reconstructed information about an event \cite{Design_and_Construction_of_the_MicroBooNE_Detector}.
 
-The details of hit construction and the basics of reconstruction are discusses in \ChapterRef{chap:Energy_Reco}.
-
-
-
+The details of hit construction and the basics of reconstruction are discussed in \ChapterRef{chap:Energy_Reco}.
 
 
 \section{Booster Neutrino Beam}\label{sec:BNB}
-The \gls{bnb} is produced by firing 8 GeV protons onto a beryllium target resulting in a secondary beam of hadrons \cite{FNAL_proton_accelerator}. A toroidal focusing horn surrounds the target and focuses or defocuses charged particles depending on the sign of their charge. The focused hadrons then travel down a 50 m tunnel where most of them will decay producing muon neutrinos and a small fraction of electron neutrinos. At the end of the 50 m decay region is a concrete and steel absorber designed to absorb any non-neutrino particles \cite{SciBooNE_BNB_description}. A schematic of the \gls{bnb} layout is shown in \FigureRef{fig: BNB schematic}. The decay modes of the hadrons resulting in a neutrino and the corresponding branching ratios are listed in \TableRef{Table: BNB decay modes}. 
+The \gls{bnb} is produced by firing 8 GeV protons (the power of the proton beam is $\sim 700$ kW) onto a beryllium target resulting in a secondary beam of hadrons \cite{FNAL_proton_accelerator}. A toroidal focusing horn surrounds the target and focuses or defocuses charged particles depending on the sign of their charge. The focused hadrons then travel down a 50 m tunnel where most of them will decay producing muon neutrinos and a small fraction of electron neutrinos. At the end of the 50 m decay region is a concrete and steel absorber designed to absorb any non-neutrino particles \cite{SciBooNE_BNB_description}. A schematic of the \gls{bnb} layout is shown in \FigureRef{fig: BNB schematic}. The decay modes of the hadrons resulting in a neutrino and the corresponding branching ratios are listed in \TableRef{Table: BNB decay modes}. The branching ratio of decay modes which do not involve neutrinos are omitted, hence the total branching ratio for kaon decays is less than a 100\%.
 
 \begin{figure}
     \centering
@@ -192,7 +192,7 @@ Particle                 & Decay Mode                        & Branching Ratio (
                          & $\pi^+ + \mu^- + \numubar$ & 13.469              \\ \hline
 $\mu^+$                   & $e^+ + \nue + \numubar$       & 100                
 \end{tabular}
-\caption[Hadron decay mode in the BNB.]{The decay modes of the hadrons produced by the \gls{bnb} when running in neutrino mode. The branching ratio of each of the decay modes is also given \cite{BNB_flux}.}
+\caption[Hadron decay mode in the BNB.]{The decay modes of the hadrons produced by the \gls{bnb} when running in neutrino mode. The branching ratio of each of the leptonic decay modes is also given \cite{BNB_flux}.}
 \label{Table: BNB decay modes}
 \end{table}
 
@@ -229,10 +229,9 @@ The second phase of the program focuses on the \gls{sbnd} and \gls{icarus} detec
 
 The close proximity of \gls{sbnd} to the \gls{bnb} means an unprecedented number of neutrino-argon events will be observed which is expected to be of the order 2 million events a year, with 50,000 of them being \nue \gls{cc} events which is sufficient to investigate multiple exclusive channels in addition to the inclusive ones \cite{sbnd_pot}. Joint fits between \gls{sbnd} and \gls{icarus} will be performed in order to exploit the best sensitivity of the \gls{sbn} program. \gls{microboone} data may also be included to produce a three detector fit as is shown in \ChapterRef{chap:VALOR}. 
 
-
 \subsection{SBND}\label{sec:SBND}
 
-\gls{sbnd} was purposely designed to be the near detector of the \gls{sbn} program and has a total active volume with dimensions (4, 4, 5) m containing 112 tons of liquid argon. It consists of two \glspl{tpc} and therefore two distinct active volumes. A central shared cathode sits in the middle of the detector with an anode on either side as is shown in \FigureRef{fig:sbnd_schematic} with the detector orientated such that the z-direction is along the neutrino beam line. Each of the \glspl{apa} consists of three wire planes where the first and second induction plane are orientated at $\pm 60^{\circ}$ to the vertical and the collection plane is vertical. In all cases, the wire plane spacing and the wire pitch are 3 mm. The nominal electric field in each of the \glspl{tpc} is 500 V/m \cite{SBN_Proposal}. 
+\gls{sbnd} was purposely designed to be the near detector of the \gls{sbn} program and has a total active volume with dimensions (4, 4, 5) m containing 112 tons of liquid argon. It consists of two \glspl{tpc} and therefore two distinct active volumes. A central shared cathode sits in the middle of the detector with an anode on either side as is shown in \FigureRef{fig:sbnd_schematic} with the detector orientated such that the z-direction is along the neutrino beam line. Each of the \glspl{apa} consists of three wire planes where the first and second induction plane are orientated at $\pm 60^{\circ}$ to the vertical and the collection plane is vertical. In all cases, the wire plane spacing and the wire pitch are 3 mm which is limited by the diffusion of the drifting electrons. The nominal electric field in each of the \glspl{tpc} is 500 V/m \cite{SBN_Proposal}. 
 
 \begin{figure}[!h]
     \centering
@@ -252,10 +251,18 @@ The close proximity of \gls{sbnd} to the \gls{bnb} means an unprecedented number
     \label{fig:sbnd_crt}
 \end{figure}
 
+\newpage
 \subsubsection*{Photon Detection System}
 The \gls{pds} consists of a total of 24 \textit{boxes}, 12 of which will be mounted behind each \gls{apa}. Each box houses 5 \glspl{pmt} and 8 \glspl{arapuca} (specifically, X-ARAPUCA's are used which are an advancement over the initial \gls{arapuca} design) as shown in \FigureRef{fig:pds_box}. The 4 outer \glspl{pmt} of each box are coated with \gls{tpb} whilst the central one remains uncoated. The scintillation light produced by argon has wavelengths in the \gls{vuv} region, however, the \glspl{pmt} are only able to detect visible light. The \gls{tpb} coating shifts the wavelength of the \gls{vuv} light into the visible region allowing it to be detected. Therefore, the coated \glspl{pmt} are sensitive to both visible and \gls{vuv} light whilst the uncoated \glspl{pmt} are only sensitive to visible light \cite{LArTPC_review}. 
 
-\glspl{arapuca} are a novel light trap which consists of a box where the internal surfaces are highly reflective. The surface of the \gls{arapuca} which faces the incoming light consists of a dichroic filter with a wavelength shifter on either side of the filter. The wavelength of the light which is incident on the outermost shifter is shifted such that it may pass through the dichroic filter and after passing through the filter the light is again wavelength shifted so that it may no longer pass through the filter and thus remains trapped in the \gls{arapuca}. A schematic of the \gls{arapuca} design is shown on the left of \FigureRef{fig:arapuca}. The inside of the \gls{arapuca} module contains a \gls{sipm} photo-sensor in order to detect the light. Due to the highly reflective nature of the inside of the \gls{arapuca}, only a small region needs to be exposed to a photo-sensor in order to detect the trapped photons \cite{ARAPUCA}. The X-ARAPUCA improves on the initial design by replacing the inner wavelength shifter with an acrylic slab with the wavelength shifter implanted in the slab and the photo-sensor being directly attached to the slab. Light entering the X-ARAPUCA may be detected in the same way as was done in the original \gls{arapuca} (\FigureRef{fig:arapuca}: Left), however, the photons may also become trapped in the slab by total internal reflection and travel within the slab to the photo-sensor (\FigureRef{fig:arapuca}: Middle) or if the light enters at a large angle, the photons may become trapped between the surface of the slab and the filter and will travel to the photo-sensor without ever entering the slab (\FigureRef{fig:arapuca}:~Right). The middle scenario of \FigureRef{fig:arapuca} represents a direct improvement over the original \gls{arapuca} design because the number of reflections on the internal sides of the X-ARAPUCA module is reduced which in turn increases the photon detection efficiency \cite{X-ARAPUCA}. 
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width = \mediumfigwidth]{figures-chap3/PDS_box_2.jpg}
+	\caption[Image of PDS box.]{Image of a \gls{pds} box showing the position of the 5 \glspl{pmt} and the 4 pairs of X-ARAPUCA'S. The central \gls{pmt} is left uncoated, whilst the 4 outer \glspl{pmt} are coated with \gls{tpb}.} %\cite{LArTPC_review}.}
+\label{fig:pds_box}
+\end{figure}
+
+\glspl{arapuca} are a novel light trap which consists of a box where the internal surfaces are highly reflective. The surface of the \gls{arapuca} which faces the incoming light consists of a dichroic filter with a wavelength shifter on either side of the filter. The cut-off wavelength for passing through the dichroic filter is 400 nm. The wavelength of the light which is incident on the outermost shifter is shifted to 350 nm such that it may pass through the dichroic filter and after passing through the filter the light is again wavelength shifted to 430 nm so that it may no longer pass through the filter and thus remains trapped in the \gls{arapuca}. A schematic of the \gls{arapuca} design is shown on the left of \FigureRef{fig:arapuca}. The inside of the \gls{arapuca} module contains a \gls{sipm} photo-sensor in order to detect the light. Due to the highly reflective nature of the inside of the \gls{arapuca}, only a small region needs to be exposed to a photo-sensor in order to detect the trapped photons \cite{ARAPUCA}\cite{X-ARAPUCA}. The X-ARAPUCA improves on the initial design by replacing the inner wavelength shifter with an acrylic slab with the wavelength shifter implanted in the slab and the photo-sensor being directly attached to the slab. Light entering the X-ARAPUCA may be detected in the same way as was done in the original \gls{arapuca} (\FigureRef{fig:arapuca}: Left), however, the photons may also become trapped in the slab by total internal reflection and travel within the slab to the photo-sensor (\FigureRef{fig:arapuca}: Middle) or if the light enters at a large angle, the photons may become trapped between the surface of the slab and the filter and will travel to the photo-sensor without ever entering the slab (\FigureRef{fig:arapuca}:~Right). The middle scenario of \FigureRef{fig:arapuca} represents a direct improvement over the original \gls{arapuca} design because the number of reflections on the internal sides of the X-ARAPUCA module is reduced which in turn increases the photon detection efficiency \cite{X-ARAPUCA}. 
 
 \begin{figure}[!h]
     \centering
@@ -265,13 +272,6 @@ The \gls{pds} consists of a total of 24 \textit{boxes}, 12 of which will be moun
 \end{figure}
 
 Another component of the \gls{pds} is covering each side of the \gls{cpa} with a 19 m$^2$ of \gls{tpb} coated reflective covering. This means that \gls{vuv} light directed towards the \gls{cpa} will be wavelength shifted into the visible spectrum and reflected back to towards the \glspl{pmt} where it may be detected. Since one of the \glspl{pmt} in each of the boxes remains uncoated, it will allow \gls{sbnd} to distinguish between light that is initially directed towards the \glspl{pmt} and the reflected light because the reflected light will be visible in all \glspl{pmt} whereas only the four outer \glspl{pmt} will be able to detect direct light \cite{LArTPC_review}. 
-
-\begin{figure}[!h]
-    \centering
-    \includegraphics[width = \mediumfigwidth]{figures-chap3/PDS_box_2.jpg}
-    \caption[Image of PDS box.]{Image of a \gls{pds} box showing the position of the 5 \glspl{pmt} and the 4 pairs of X-ARAPUCA'S. The central \gls{pmt} is left uncoated, whilst the 4 outer \glspl{pmt} are coated with \gls{tpb}.} %\cite{LArTPC_review}.}
-    \label{fig:pds_box}
-\end{figure}
 
 \newpage
 \subsection{MicroBooNE}\label{sec:MicroBooNE}
@@ -305,13 +305,15 @@ The light collection system for \gls{icarus} is comprised of a series of 74 \gls
     \label{fig:icarus}
 \end{figure}
 
-The \gls{icarus} \gls{crt} system surrounds the detector on all sides however the actual position is not always the same due to design choices. The \gls{crt} on the topmost side which experiences the highest flux of cosmic rays, is located outside the \gls{tpc}, about 3m from the top face above the readout electronics. It consists of two planes of scintillating modules with the readout coming from the same electronics board as is used by \gls{sbnd}.
+The \gls{icarus} \gls{crt} system surrounds the detector on all sides however the actual position is not always the same due to design choices. The \gls{crt} on the topmost side which experiences the highest flux of cosmic rays, is located outside the \gls{tpc}, about 3 m from the top face above the readout electronics. It consists of two planes of scintillating modules with the readout coming from the same electronics board as is used by \gls{sbnd}.
 The \gls{crt} for the vertical sides are again outside the \gls{tpc} and behind the \gls{pmt} arrays and close to the cryostat walls. The scintillator modules from the \gls{minos} experiment are being reused for this purpose. The \gls{crt} for the bottom face are the repurposed spare modules from the veto shield from the Double Chooz experiment and are located within the cryostat. Only about 50\% of the bottom face is covered by the \gls{crt} because of limited space due to the supporting structure of the cryostat \cite{SBN_Proposal}\cite{ICARUS_CRT}.
 
 
 \section{SBN Physics Capabilities}\label{sec:sbn_physics_capabilities}
 
 The \gls{sbn} program was designed with the aim of resolving the contentious results observed by a number of experiments as was discussed in \SectionRef{subsec:Neutrino Oscillations}. Since it was purposely planned with this in mind, the \gls{sbn} program has a number of advantages over previous experiments in the hopes of detecting eV scale sterile neutrinos: it has a multi-detector design, the near and far detectors are positioned such that the oscillation signal is close to maximal for an expected set of oscillation parameters, the detectors use the same technology and have the same target medium \cite{SBN_paper}. 
+
+The mixing angle, $\sin^2{2\theta}$, gives the maximum oscillation probability amplitude. For the case that $\frac{\Delta m^2_{41}L}{4E} = \frac{\pi}{2}$, the neutrino mixing probability is maximal and is given by the mixing angle. 
 
 The top two plots of \FigureRef{fig:osc_probability} show the expected oscillation probability for the \nue appearance channel as a function of the baseline for two sets of oscillation parameters, $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ and a neutrino energy of 700 MeV. The neutrino energy corresponds to the peak energy of the \gls{bnb} and the oscillation points are chosen as the upper and lower limits of the global \nue appearance data. In both cases, there is a clear difference in the oscillation probability between the near and far detector showing that the \gls{sbn} program is sensitive to oscillations within this parameter range \cite{SBN_paper}. The bottom two plots show the oscillation probability for the same two oscillation points as a function of neutrino energy for baselines of 110 m and 600 m. The ratio of the oscillation probability at 600 m to that at 110 m is also shown. Again, there is a clear difference in the oscillation probability for most energies showing that the \gls{sbn} program is sensitive to a wide range of neutrino energies \cite{SBN_paper}. The \nue appearance oscillation sensitivity constructed at the time of the proposal is shown in \FigureRef{fig:SBN_proposal_sensitivity}. These contours include the relevant backgrounds and systematic uncertainties with the exception of detector systematics. 
 
@@ -338,10 +340,10 @@ This main goal of the \gls{sbn} program revolves around sterile neutrino oscilla
 The large event rate and the high-resolution event reconstruction provided may allow the \gls{sbn} program to be sensitive to \gls{bsm} physics other than sterile neutrino oscillations \cite{SBN_paper}. The potential areas include, but are not limited to,
 \begin{itemize}
     \item Light Dark Matter - Assuming a dark matter particle has an associated light mediator particle which interacts with quarks, the high-intensity proton beam will produce a dark matter beam alongside neutrinos. The dark matter particles will propagate to the detectors alongside the neutrinos where they may scatter off the argon nuclei. Neutrinos will however represent a large background in such a search \cite{SBN_paper}. 
-    \item Large Extra Dimensions - The neutrino mass scale could be explained by the presence of additional dimensions. The right-handed neutrinos would be able to propagate in the extra dimensions whilst the active neutrinos would be confined to the standard dimensions \cite{SBN_paper}. 
+    \item Large Extra Dimensions - The neutrino mass scale could be explained by the presence of additional dimensions. The right-handed neutrinos would be able to propagate in the extra dimensions whilst the active neutrinos would be confined to the standard dimensions. Oscillations between the active neutrinos and the right-handed ones are still allowed with the signal being the appearance and disappearance of active neutrinos \cite{SBN_paper}. 
     \item Heavy Sterile Neutrinos - If heavy sterile neutrinos (heavy neutral leptons) such as those present in the seesaw-mechanism discussed in \SectionRef{sec:seesaw_mechanism} are of an MeV mass scale, they may be produced in the \gls{bnb} via meson decay. They would then propagate along the beamline and their decay products may be observed in the detectors \cite{SBN_paper}\cite{MeV_scale_sterile_neutrino}.
     \item Dark Neutrinos - A beam neutrino interacts with an argon nucleus and scatters to a dark neutrino. The dark neutrino decays to a dark boson (and neutrino) and in turn, the dark boson decays to an \positron \electron pair. This mechanism could provide an explanation for the \gls{miniboone} low energy excess \cite{SBN_paper}\cite{dark_neutrino}. 
-    \item Millicharged Particles - Extensions to the \gls{sm} may lead to particles with a very small charge relative the electron (i.e. the observed quantised charge would no longer hold). Millicharged particles may be produced via the decay of mesons meaning \gls{sbn} has the ability to detect them. Two possible signatures for millicharged particles would be the observation of multiple low energy deposits which are aligned with the beam target or the elastic scattering of millicharged particles with electrons with the sensitivity being enhanced for the detection of low energy electrons.
+    \item Millicharged Particles - Extensions to the \gls{sm} may lead to particles with a very small charge relative to the electron (i.e. the observed quantised charge would no longer hold). Millicharged particles may be produced via the decay of mesons meaning \gls{sbn} has the ability to detect them. Two possible signatures for millicharged particles would be the observation of multiple low energy deposits which are aligned with the beam target or the elastic scattering of millicharged particles with electrons with the sensitivity being enhanced for the detection of low energy electrons.
 \end{itemize}
 Feynman diagrams of possible light dark matter, heavy sterile neutrino, dark neutrino and millicharged particle interactions are shown in \FigureRef{fig:BSM_feynman_diagrams}.
 
